--- a/estilos.css
+++ b/estilos.css
@@ -39,6 +39,11 @@ body {
   width: min(112rem, 100%);
   margin: 0 auto;
 }
+.logo {
+  /* filter: blur(1px); */
+  /* filter: brightness(100%); */
+  filter: saturate(400%) brightness(2) hue-rotate(40deg);
+}
 main {
   background-color: var(--color-base-gray-100);
   overflow-y: scroll;
@@ -90,9 +95,88 @@ ul li.active {
   /* ele cobre o espaço sem deixar a imagem muito feia */
   border-radius: 50%;
 }
-
+/* galeria */
+main h1 {
+  padding-top: 1.6rem 3.2rem;
+  font-size: 2.4rem;
+}
+.gallery {
+  margin-top: 3.2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2.2rem;
+}
+.item {
+  background-color: var(--color-base-white);
+  border-radius: 0.8rem;
+  overflow: hidden;
+  /* tudo q sobrar, nao ira aparecer */
+}
+.item img {
+  width: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  filter: grayscale(1);
+  /* transition-property: all;
+  transition-duration: 200ms;
+  transition-delay: 0;
+  transition-timing-function: ease-out; */
+  transition: all 200ms ease-out;
+  display: block;
+}
+.item img:hover {
+  filter: hue-rotate(7deg) contrast(101%) saturate(200%);
+  transform: scale(1.1) rotate(-2deg);
+}
+.details {
+  padding: 2.2rem;
+}
+.details h2 {
+  font-size: 1.8rem;
+  background-color: var(--color-base-white);
+  z-index: 1;
+  position: relative;
+}
+.tags {
+  margin-top: 1.2rem;
+}
+.tags span {
+  padding: 0.6rem;
+  background-color: var(--color-base-gray-100);
+  border-radius: 0.4rem;
+  line-height: 0;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
 footer p {
   text-align: center;
   padding: 1.6rem;
   font-weight: 600;
+}
+
+header {
+  --startY: -100%;
+  animation: move 0.2s;
+}
+footer {
+  --startY: 100%;
+  animation: move 0.2s;
+}
+@keyframes move {
+  from {
+    transform: translateY(var(--startY));
+  }
+}
+.item {
+  --delay: 0.4s;
+  animation: appear 0.4s var(--delay) backwards;
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+  50% {
+    transform: scale(1.2);
+  }
 }
