--- a/estilos.css
+++ b/estilos.css
@@ -9,11 +9,12 @@
   font-size: 62.5%;
   /* 10px é 1rem */
   /* so dividir o pixel por 10 */
+  --hue: 310;
   --color-base-white: #ffffff;
-  --color-base-gray-100: #f5f5f5;
-  --color-base-gray-500: #3d3d3d;
-  --color-base-gray-300: #8d8d99;
-  --color-base-gray-900: #202024;
+  --color-base-gray-100: hsl(0, 0%, 96%);
+  --color-base-gray-500: hsl(0, 0%, 24%);
+  --color-base-gray-300: hsl(var(--hue), 60%, 58%);
+  --color-base-gray-900: hsl(var(--hue), 60%, 30%);
 }
 html,
 body,
@@ -26,9 +27,6 @@ body {
   color: var(--color-base-gray-900);
 }
 
-#app > * {
-  border: 1px solid red;
-}
 #app {
   display: grid;
   grid-template-rows: max-content 1fr max-content;
@@ -40,8 +38,6 @@ body {
   margin: 0 auto;
 }
 .logo {
-  /* filter: blur(1px); */
-  /* filter: brightness(100%); */
   filter: saturate(400%) brightness(2) hue-rotate(40deg);
 }
 main {
